sock-shop-dev/kubernetes/manifests/orders.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders
  namespace: sock-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
        - name: orders
          image: weaveworksdemos/orders:0.4.7
          ports:
          - name: http 
            containerPort: 80
          volumeMounts:
            - name: tmp
              mountPath: /tmp
          securityContext:
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
              add: ["NET_BIND_SERVICE"]

          livenessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 180  
            periodSeconds: 5
            timeoutSeconds: 2  
            failureThreshold: 3  
            successThreshold: 1
          readinessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 120   
            periodSeconds: 5
            timeoutSeconds: 2  
            failureThreshold: 3  
            successThreshold: 1

          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 128Mi


      volumes:
        - name: tmp
          emptyDir:
            medium: Memory
---
apiVersion: v1
kind: Service
metadata:
  name: orders
  namespace: sock-shop
  labels:                    
    app: orders            
spec:
  selector:
    app: orders
  ports:
    - name: http     
      port: 80
      targetPort: 80
