sock-shop-dev/kubernetes/manifests/payment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
  namespace: sock-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
        - name: payment
          image: weaveworksdemos/payment:0.4.3
          ports:
          - name: http  
            containerPort: 80
          securityContext:
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
              add: ["NET_BIND_SERVICE"]

          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi

          livenessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 180  
            periodSeconds: 5
            timeoutSeconds: 2  
            failureThreshold: 3  
            successThreshold: 1
          readinessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 120   
            periodSeconds: 5
            timeoutSeconds: 2  
            failureThreshold: 3  
            successThreshold: 1
---
apiVersion: v1
kind: Service
metadata:
  name: payment
  namespace: sock-shop
  labels:                    
    app: payment               # ServiceMonitor looks for this label
spec:
  selector:
    app: payment
  ports:
    - name: http     # important for ServiceMonitor
      port: 80
      targetPort: 80
