sock-shop-dev/kubernetes/manifests/queue-master.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: queue-master
  namespace: sock-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: queue-master
  template:
    metadata:
      labels:
        app: queue-master
    spec:
      containers:
        - name: queue-master
          image: weaveworksdemos/queue-master:0.3.1
          ports:
          - name: http  
            containerPort: 80
          volumeMounts:
            - name: docker-sock
              mountPath: /var/run/docker.sock
            - name: tmp
              mountPath: /tmp
          securityContext:
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
              add: ["NET_BIND_SERVICE"]

          livenessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 180  
            periodSeconds: 5
            timeoutSeconds: 2 
            failureThreshold: 3  
            successThreshold: 1
          readinessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 120   
            periodSeconds: 5
            timeoutSeconds: 2 
            failureThreshold: 3  
            successThreshold: 1

          resources:
            limits:
              cpu: 300m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 256Mi

          
      volumes:
        - name: docker-sock
          hostPath:
            path: /var/run/docker.sock
        - name: tmp
          emptyDir:
            medium: Memory
---
apiVersion: v1
kind: Service
metadata:
  name: queue-master
  namespace: sock-shop
  labels:                    
    app: queue-master               # ServiceMonitor looks for this label
spec:
  selector:
    app: queue-master
  ports:
    - name: http     # important for ServiceMonitor
      port: 80
      targetPort: 80
